--- a/lda/package.json
+++ b/lda/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.9",
@@ -15,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
